--- a/winter/client/game.csproj
+++ b/winter/client/game.csproj
@@ -18,7 +18,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>.\</OutputPath>
+    <OutputPath>bin\x86\Debug\</OutputPath>
     <DefineConstants>DEBUG;TRACE;LINUX</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -42,12 +42,18 @@
     <Compile Include="FadeEffect.cs" />
     <Compile Include="Game.cs" />
     <Compile Include="GameScreen.cs" />
-    <Compile Include="GameTimeConverter.cs" />
     <Compile Include="ImageEffect.cs" />
+    <Compile Include="InputManager.cs" />
+    <Compile Include="Menu.cs" />
+    <Compile Include="MenuItem.cs" />
+    <Compile Include="MenuManager.cs" />
+    <Compile Include="OptionsMenu.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ScreenManager.cs" />
     <Compile Include="SplashScreen.cs" />
+    <Compile Include="TitleMenu.cs" />
+    <Compile Include="TitleScreen.cs" />
     <Compile Include="XmlManager.cs" />
     <Compile Include="Image.cs" />
   </ItemGroup>
@@ -65,7 +71,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Load\SplashScreen.xml" />
     <EmbeddedResource Include="Icon.ico" />
     <Content Include="OpenTK.dll.config">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
