--- a/winter/clientgl/gamegl.csproj
+++ b/winter/clientgl/gamegl.csproj
@@ -84,6 +84,7 @@
     <Compile Include="TitleMenu.cs" />
     <Compile Include="TitleScreen.cs" />
     <Compile Include="Image.cs" />
+    <Compile Include="XmlManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="OpenTK">
@@ -100,6 +101,9 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Icon.ico" />
+    <Content Include="Content\TestMap.xml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="OpenTK.dll.config">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
