Converted to Isometric, Set up Basic Collisions.

--- a/winter/clientgl/gamegl.csproj
+++ b/winter/clientgl/gamegl.csproj
@@ -57,6 +57,7 @@
     <StartupObject>client.Program</StartupObject>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Camera.cs" />
     <Compile Include="FadeEffect.cs" />
     <Compile Include="Game.cs" />
     <Compile Include="GameplayScreen.cs" />
